# Predictive-modelling-RNA-splicing-variance-using-AI

./: README.md  advanced_analysis_Random_Forest.json  baseline_metrics.csv  best_hyperparameters_dnn.json  biological_problem_overview.txt  bootstrap_ci.json  bootstrap_confidence_intervals.json  calibration_metrics.json  class_imbalance_analysis.json  diff_expr_table.csv  differential_expression.csv  final.py  final_analysis_report.md  hyperparam_search_results.csv  main.py  metrics.json  one.py  permutation_test.json  permutation_test_results.json  project_Report.py  project_submission_report.md  pyproject.toml  risk_scores.csv  rna_splicing_explanation.txt  shap_feature_importance.csv  test_predictions.csv  test_predictions_table.csv  three.py  training_log.csv  two.py
